Add base font styles

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
     </nav>
 
     <main class="main">
-        <h1>Lecture: Sass</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit corrupti ducimus veniam iure accusantium, cumque optio nisi dicta atque rerum rem eos. Ipsa itaque tempora nisi officiis necessitatibus, harum fugit.</p>
+        <h1 class="main__title">Lecture: Sass</h1>
+        <p class="main__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit corrupti ducimus veniam iure accusantium, cumque optio nisi dicta atque rerum rem eos. Ipsa itaque tempora nisi officiis necessitatibus, harum fugit.</p>
+        <p class="main__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit corrupti ducimus veniam iure accusantium, cumque optio nisi dicta atque rerum rem eos. Ipsa itaque tempora nisi officiis necessitatibus, harum fugit.</p>
+        <p class="main__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit corrupti ducimus veniam iure accusantium, cumque optio nisi dicta atque rerum rem eos. Ipsa itaque tempora nisi officiis necessitatibus, harum fugit.</p>
+        <p class="main__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. <span class="main__text--italics">Reprehenderit corrupti ducimus veniam iure accusantium, cumque optio nisi dicta atque rerum rem eos.</span> Ipsa itaque tempora nisi officiis necessitatibus, harum fugit.</p>
     </main>
 
     <section class="author">
